--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ header-img: "img/about-bg.jpg"
     <!--copied from markdown -->
     <blockquote><p>搞搞安全，做做研究<br></p>   </blockquote>
 
-    <p>hey，我是<strong>goobey</strong>，安全行业从业者 &amp; 业余占卜师，前通讯运营商员工 · <a href="http://www.chinatelecom.com.cn/">中国电信</a> · 安全工程师 ，现就职于世界五百强公司 · <a href="https://www.guanxingtai.net/"> · </a>信息安全总监</p>
+    <p>hey，我是<strong>goobey</strong>，安全行业从业者 &amp; 业余占卜师，前通讯运营商员工 · <a href="http://www.chinatelecom.com.cn/">中国电信</a> · 安全工程师 ，现就职于世界五百强公司 · <a href=""> · </a>信息安全总监</p>
 <!-- 
     <p>一些作品和开源项目，👉 戳 <a href="https://zhuanlan.zhihu.com/p/21280918">演说.io</a>、<a href="/portfolio">Portfolio</a> 与 <a href="http://github.com/huxpro">Github</a>；除了在博客与 <a href="http://zhuanlan.zhihu.com/huxblog">知乎专栏 · 一生想做浪漫极客</a> 写点东西外，我也是 <a href="http://www.gfansub.com/">GDG 字幕组</a> 与 <a href="http://zhuanlan.zhihu.com/FrontendMagazine">前端外刊评论 · 知乎专栏</a> 的翻译维护成员。</p>
  -->   
