--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ description: "占卜师"
         Posted by {% if post.author %}{{ post.author }}{% else %}{{ site.title }}{% endif %} on {{ post.date | date: "%B %-d, %Y" }}
     </p>
 </div>
+<script type="text/javascript" src="//js.users.51.la/19402291.js"></script>
 <hr>
 {% endfor %}
 
