--- a/index.html
+++ b/index.html
@@ -42,4 +42,13 @@ description: "占卜师"
     {% endif %}
 </ul>
 {% endif %}
-<script type="text/javascript" src="//js.users.51.la/19402291.js"></script>
+
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?d6ae03990beb26b40c1746a4b3a2dd20";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
